# ferris

./: .gitignore  Cargo.toml
ddd/: Cargo.toml
ddd/src/: main.rs
docs/: c2rust.md  ddd.md  docs.md  generic.md  keyword.md  lambda.md  polymorph.md  prompt.md  send_sync.md  type_comp.md  types.md
fizz_buzz_whizz/: Cargo.toml
fizz_buzz_whizz/benches/: contains_bench_test.rs  game_bench_test.rs
fizz_buzz_whizz/src/: game_v1.rs  game_v2.rs  lib.rs  main.rs
game/: Cargo.toml
game/benches/: contains_bench_test.rs  game_bench_test.rs
game/src/: game_v1.rs  game_v2.rs  game_v3.rs  game_v4.rs  lib.rs  main.rs
guidelines/: Cargo.toml
guidelines/src/: lib.rs  main.rs  repo.rs
lac/: Cargo.toml  build.rs
lac/src/: lib.rs
lac/src/ffi/: bindings.rs  bindings_gen.rs  mod.rs
lac/src/intf/: mod.rs
lac/src/lac/: device.rs
lac/src/tests/: mod.rs
lac/tests/: lac_test.rs
lac/tests/c_stubs/: chip_cfg.cc  chip_cfg.h  chip_sdk.cc  device.cc  device.h
lac/tests/device/: bindings.rs  mod.rs
resource/: Cargo.toml  mod_deps.dot
resource/src/: allocation.rs  lib.rs  process.rs  resource.rs  resource_cost.rs
resource/src/app/: lazy_static_app.rs  mod.rs  once_lock_app.rs  thread_local_app.rs
resource/src/domain/: allocation.rs  mod.rs  process.rs
resource/src/domain/resource/: cpu.rs  factory.rs  memory.rs  mod.rs  storage.rs
resource/src/resource/: cost_trait.rs  cpu.rs  factory.rs  memory.rs  mod.rs  storage.rs
resource/src/service/: fast_process_repo.rs  mod.rs  proc_repo.rs  proc_service.rs  process_repo.rs  repo.rs
resource/src/service/repo/: dashmap_process_repo.rs  hashmap_process_repo.rs  local_process_repo.rs
resource/tests/: cost_test.rs
