[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "contains_bench_test"
harness = false

[[bench]]
name = "game_bench_test"
harness = false

[features]
default = []
game_v1 = []
game_v2 = []
game_v3 = []
parallel = ["rayon"]

[dependencies]
lazy_static = "1.5.0"
rayon = { version = "1.10", optional = true }
