[package]
name = "resource"
version = "0.1.0"
edition = "2021"

[features]
resource_cpu = []
resource_memory = []
resource_storage = []
repo_normal = []
platform_high = ["resource_cpu", "resource_memory", "resource_storage"]
platform_low = ["resource_cpu", "resource_memory"]
default = ["resource_cpu", "repo_normal"]

[dependencies]
cfg-if = "1.0.0"
dashmap = "6.1.0"
lazy_static = "1.5.0"
once_cell = "1.20.2"
rayon = "1.10.0"
