[package]
name = "resource"
version = "0.1.0"
edition = "2021"

[features]

resource_cpu = []
resource_memory = []
resource_storage = []

repo_local = []
repo_hashmap = []
repo_dashmap = []

singleton_local_thread = ["repo_local"]
singleton_lazy_static = ["repo_dashmap"]
singletom_once_lock = ["repo_dashmap"]

platform_high = ["resource_cpu", "resource_memory", "resource_storage"]
platform_low = ["resource_cpu", "resource_memory"]

default = ["resource_cpu"]

[dependencies]
cfg-if = "1.0.0"
dashmap = { version = "6.1.0", features = ["rayon"] }  
lazy_static = "1.5.0"
once_cell = "1.20.2"
rayon = "1.10.0"
